sumo/tests/netconvert/import/XML/errors/broken_edge/edge#nolanes__empty1/errors.netconvert
Error: Attribute 'numLanes' in definition of edge '1' is empty.
Quitting (on error).
